# vds

./: .envrc  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.envs/.local/: .api
docker/: docker-compose.yml
docker/local/api/: Dockerfile  entrypoint  start
docker/local/huey/: start-worker
src/vidoso/: config.py  main.py  worker.py
src/vidoso/core/: logger.py
src/vidoso/repo/: jobs.py  schemas.py  segments.py
src/vidoso/routes/v1/: routers.py  schemas.py
src/vidoso/services/: search.py  stream_processor.py
tests/: conftest.py
